test/files/neg/unit-companion.scala
abstract class Foo {
  val u = Unit
}
